Security commit